@@ -1,10 +1,14 @@
 = Changelog
 :toc:
 
-== wip v0.32.0: New Features
+== wip v0.32.0: Breaking Changes
 
 As the releases before, this release has 100% test coverage.
 Tested with Go 1.16, 1.17, 1.18, 1.19, 1.20, 1.21, 1.22, 1.23 and 1.24.
+
+=== Breaking Changes
+
+* Rename `opt.CustomCompletion` to `opt.ArgCompletions` to clarify what this completion is for.
 
 === New Features
 
